# tutoria-ia-2.0

./: README.md
aula 1 - agentes de ia/: slide-t2-aula-1.excalidraw
aula 1 - agentes de ia/ai-app-intro/: .gitignore  README.md  graph_20260114_204929.mmd  pyproject.toml
aula 1 - agentes de ia/ai-app-intro/src/: main.py
